--- a/front-end/src/main/twirl/views/index.scala.html
+++ b/front-end/src/main/twirl/views/index.scala.html
@@ -6,7 +6,7 @@
         <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="/webjars/@{webJarAssets.locate("normalize.css")}"/>
         <link rel="stylesheet" href="/webjars/@{webJarAssets.locate("foundation.min.css")}"/>
-        <link rel="stylesheet" href="/assets/main.css"/>
+        <link rel="stylesheet" href="/assets/chirper.css"/>
     </head>
     <body>
         <div id="content"></div>
