--- a/front-end/src/main/twirl/views/circuitbreaker.scala.html
+++ b/front-end/src/main/twirl/views/circuitbreaker.scala.html
@@ -4,8 +4,8 @@
     <head>
         <title>Chirper</title>
         <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="/webjars/@{webJarAssets.locate("normalize.css")}"/>
-        <link rel="stylesheet" href="/webjars/@{webJarAssets.locate("foundation.min.css")}"/>
+        <link rel="stylesheet" href="/webjars/@{webJarAssets.locate("normalize.css").url.get}"/>
+        <link rel="stylesheet" href="/webjars/@{webJarAssets.locate("foundation.min.css").url.get}"/>
         <link rel="stylesheet" href="/assets/main.css"/>
     </head>
     <body>
